# NaiveView

./: .clang-format  CMakeLists.txt  LICENSE  README.md  naive_view.service
cmake/: WrapResource.cmake
playground/: CMakeLists.txt  bh1750_play.cpp  draw_something_kms.cpp  dual_bh1750_play.cpp  file_type.cpp  frame-fetch.cpp  set_gpio.cpp  set_screen_brightness.cpp  show_video_drivers.cpp
src/: CMakeLists.txt  CameraReader.cpp  CameraReader.h  FrameTask.cpp  FrameTask.h  IRCutSetter.cpp  IRCutSetter.h  LightSensorThread.cpp  LightSensorThread.h  LuxSetterThread.cpp  LuxSetterThread.h  PWMBrightnessSetter.cpp  PWMBrightnessSetter.h  RenderThread.cpp  RenderThread.h  RenderThreadBase.cpp  RenderThreadBase.h  RenderThread_EglDma.cpp  RenderThread_EglDma.h  RenderThread_RGB888.cpp  RenderThread_RGB888.h  RenderThread_YUV420.cpp  RenderThread_YUV420.h  SdlHelpers.h  Settings.cpp  Settings.h  TaskQueue.h  Utils.cpp  Utils.h  WaveshareScreenBrightnessSetter.cpp  WaveshareScreenBrightnessSetter.h  gen_settings.pl  naive_view.cpp  spawn_resource.pl
src/elements/: IRCutSetter.cpp  IRCutSetter.h  PWMBrightnessSetter.cpp  PWMBrightnessSetter.h  ScreenBrightnessMapper.cpp  ScreenBrightnessMapper.h  ScreenBrightnessSetter.h  WaveshareScreenBrightnessSetter.cpp  WaveshareScreenBrightnessSetter.h
src/glhelpers/: Buffer.cpp  Buffer.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h
src/shaders/: camera_frame.fs  camera_frame.vs  camera_frame_dma.fs  camera_frame_rgb.fs  camera_frame_yuv420.fs
tests/: CMakeLists.txt  camera_test.cpp  queue_test.cpp
